Changes towards version 0.3:
- Date on the green bar now has floating period between day and
  the year like in PC version (bug #307 part 5) -Mika
- AWARE_OF_SAMATRA flag is now written as well as read (closes #113), 
  from Nic
- Subtitle drawing is now cached (closes #313) -Mika
- Fix glitch and lockup in dialogs when rewinding (bugs #311 and #272),
  from chmmravatar
- Fastforwarding when in last subtitle now works as expected (bug #318),
  from chmmravatar
- Fixed MixSDL buffer underrun handling (bug #211) -Mika
- Fix issue with caps lock and num lock preventing planet scan
  and lander message skipping (bug #299), from chmmravatar
- Subtitles are now hidden after alien has finished talking (bug #312),
  from chmmravatar
- Fix for mycon portrait (bug #183), from Nic
- Music levels no longer drop in conversations when using -T 0
  (partial fix for bug #309), from chmmravatar
- Added PC-style conversation summaries (bug #310), from chmmravatar
- Pressing pause key now stops dialog correctly (bug #167), from chmmravatar
- Fix some glitches in load/save screen (bug #163), from chmmravatar
- Utwig shield now pulsates properly (bug #269), from Nic
- Fix for memory leak in TFB_DrawCanvas_ExtractPalette (bug #277),
  from Richard Braakman
- Patched Umgah dialogue, fixing bug #8
- Crossfade code now explicitly caches the screen to transition from, and
  thus no longer glitches.  The code needed a slight rewrite, but this
  does fix bug #33 -McMartin
- Melee scaling is now trilinear by default, but it's still possible to
  choose nearest neighbour with --meleescale; fixes #34 -Mika
- Minimum scaling extent is now 1,1; fixes mostly small-objects-disappearing
  problem in melee, from chmmravatar
- Fixed a long standing memory leak relating  to planet surface -PhracturedBlue
- Scaled images no longer allocate/free memory all the time -McMartin
- Planet spin on lander launch/return is now enabled -PhracturedBlue